--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,15 @@ padding-top: 20px;
   background: #000;
   margin: 6px auto; 
   }
+  /*Quebra*/
+  .quebra{
+    width: 100%;
+    height: 220px;
+    background: url("../img/background-footer.jpg") no-repeat center;
+    background-size: cover;
+    text-align: center;
+  }
+  .quebra .quote-externo{
+    max-width: 400px;
+    padding-top: 40px;
+  }
