--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ margin: 14px auto 10px auto;
 background: #FEC63E;
 text-align: center;
 }
+.produtos li img{
+  margin: 0 auto;
+}
 .produtos_lista li h3{
   font-weight: bold;
   font-size: 18px;
@@ -147,6 +150,7 @@ text-align: center;
 .produtos_icone{
   background: #000;
   padding: 20px;
+
 }
 .call{
   padding-top: 40px;
@@ -227,3 +231,56 @@ padding-top: 20px;
     max-width: 400px;
     padding-top: 40px;
   }
+  /*Footer*/
+  .footer{
+    width: 100%;
+    background: #000;
+    color:#fff;
+    padding: 20px 0;
+  }
+  /*Estilizamos todos os h3, assim, aplicamos nele de forma geral para 
+  todos que estão dentro do footer*/
+  .footer h3{
+    font-size: 18px;
+    line-height: 25px;
+    color: #FEC63E;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    font-weight: bold;
+  }
+  /*Agora criamos o pseudo-elemento after dentro do h3, ppois ele está sendo
+  usado lá*/
+  .footer h3::after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #FEC63E;
+    margin: 6px 0 12px 0;
+  }
+  .footer_historia{
+    padding-right: 40px;
+  }
+  .footer_contato ul li{
+    font-size: 14px;
+    line-height: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .footer_redes ul li{ 
+    display: inline-block;/*Ficam em forma de lista, por isso usamos pra tirar*/
+    margin-right: 10px;
+  }
+  /*Falaremos com o a pois queremos que a parte inteira dele seja clicável*/
+  .footer_redes ul li a{
+    border: 3px solid #FEC63E;
+    display: block;
+    padding: 10px;
+ }
+ .footer_redes ul li a:hover{
+  border-color: #fff;
+ }
+ .copy{
+   width: 100%;
+   background: #FEC63E;
+   padding: 20px 0;
+ }
