--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,9 @@ margin: 14px auto 10px auto;
 .produtos{
   padding: 60px 0;
 }
+.produtos_lista li h3:hover {
+color: #fff;
+}
 .produtos_lista li{
 background: #FEC63E;
 text-align: center;
