--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-/*Estilos Gerais. Se quisermos algo diferente para alguns dos elementos daqui
-precisaremos usar uma class pra nao adotar esse estilo*/
+/*Estilos Gerais.*/
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -9,8 +8,7 @@ p{
     line-height: 20px;
   }
 
-.btn{ /*Só a margem que vamos ter que colocar especifica em cada botão, pois cada
-  um tem uma diferente. Aqui só colocaremos o estilo geral*/
+.btn{ 
   border: 3px solid #FEC63E;
   padding: 10px 30px;
   color: #FEC63E;
@@ -63,40 +61,37 @@ p{
     background: #000;
     margin: 8px 0;
   }
-img{ /*Para que todas as imagens se comportem como elementos de bloco
-  pois vai tirar uma margem que elas tem embaixo e facilita o trabalho*/
+img{ 
 display: block;
 }
 
 /*Header*/
 .header {
-  position: fixed; /*O menu fica fixo enquanto scrollamos*/
-  top: 0; /*Para que ele fique sempre no topo*/
+  position: fixed; 
+  top: 0; 
   width: 100%;
   background: #FEC63E; 
-  padding: 15px 0;/*Pra tirar do topo*/
-  z-index: 10; /*Quando elementos tem position, para ver qual fica em cima
-  de qual ao scrollarmos a pg, usamos isso*/
+  padding: 15px 0;
+  z-index: 10; 
 }
 .header_menu{
   text-align: right;
 }
-.header_menu ul li{ /*Vamos transformar o menu em um elemento em linha*/
+.header_menu ul li{ 
   display: inline-block;
   margin-left: 25px;
   margin-top: 20px;
 }
-.header_menu ul li a{ /*Estamos falando com o "a" que é o último, assim como o de cima*/
+.header_menu ul li a{ 
  color: #000;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: .1em;
  font-size: 14px;
  line-height: 20px;
- padding: 10px 0;/*Para aaumentar a área de contato no momento em que o mouse estiver focando no item do menu
- */
+ padding: 10px 0;
 }
-.header_menu ul li a:hover{ /*Para mudar de cor quando passar o mouse por cima*/
+.header_menu ul li a:hover{ 
 color: #fff;
 }
 /*Introdução*/
@@ -104,10 +99,7 @@ color: #fff;
   width: 100%;
   height: 380px;
   background: url("../img/background.jpg") no-repeat center;
-  background-size: cover; /*Para cobrir inteiro. Ele vai ficar por cima
-  pois a estrutura do header tá fixed e por isso o conteúdo que vier
-  abaixo dela vai ignorá-la e ai vai subir, para isso daremos uma margem 
-  do tamanho exato do header*/
+  background-size: cover; 
   margin-top: 92px;
   text-align: center;
   padding-top: 80px;
@@ -119,26 +111,21 @@ color: #fff;
   text-transform: uppercase;
 }
 .quote-externo{
-  max-width: 320px;/*Não vai crescer mais que isso*//*Para limitar o tamanho do texto 
-  sem precisar usar um br para quebrar linha*/
-  margin: 0 auto; /*Para alinhar ao centro novamente nao vai usar o text-align pois
-  foi colocada uma distancia padrao nele*/
+  max-width: 320px;
+  margin: 0 auto; 
   color: #fff;
-  margin-bottom: 40px; /*Margem do botão*/
+  margin-bottom: 40px; 
 }
 .quote-externo p {
   font-style: italic;
 }
-.quote-externo p::before, .quote-externo p::after{ /*Usaremos uma pseudo-class para criar as linhas de cima e de baixo*/
-content:"" ; /*Esse é um conteúdo de estilo que só está dentro do css, nao no html
-so que sem nada dentro para criar ele pelo menos*/
-/*Por padrão criar um elemento inline*/
+.quote-externo p::before, .quote-externo p::after{ 
+content:"" ; 
 display: block;
 width: 60px;
 height: 3px;
 background: #fff;
-margin: 14px auto 10px auto; /*Cima = 14px, direita = auto e assim por diante*/
-/*Muito usado quando queremos alguma coisa da interface que pareça um elemento*/
+margin: 14px auto 10px auto; 
 }
 .quote-externo cite{
   font-style: normal;
@@ -146,12 +133,12 @@ margin: 14px auto 10px auto; /*Cima = 14px, direita = auto e assim por diante*/
   font-size: 14px;
   letter-spacing: .1em;
 }
-/*Estilo geral para sabermos em qual lugar da pagina estamos (O nome fica com cor diferente)*/
-.header_menu ul li a.menu_ativo{ /*Coloca o caminho especifico dele detalhado*/
+
+.header_menu ul li a.menu_ativo{ 
   color: #fff;
 }
 /*Introdução Interna*/
-.introducao-interna{ /*Vai ser a mesma para todos, só vai mudar o background, por isso será feito aqui*/
+.introducao-interna{ 
 width: 100%;
 margin-top: 92px;
 height: 160px;
@@ -166,7 +153,7 @@ padding-top: 30px;
   text-transform: uppercase;
   }
 
-.introducao-interna h1::after{ /*Para o pseudo-elemento embaixo do nome*/
+.introducao-interna h1::after{ 
   content: "";
   display: block;
   width: 60px;
@@ -229,7 +216,7 @@ text-align: center;
 .portfolio .subtitulo::after{
   background:#FEC63E;
 }
-.portfolio_lista li:last-child{ /*Para seleciona o último item que é a imagem*/
+.portfolio_lista li:last-child{ 
   margin-top: 20px;
 }
 .portfolio .call p{
@@ -245,20 +232,17 @@ width: 634px;
 height: 83px;
 display: block;
 background: url("../img/linhas.svg") no-repeat center;
-position: absolute;/*Para posicionar usamos o position absolute. Relativo ao container 
-todo que ele pega*/
+position: absolute;
 top: 209px;
 right: 162px;
-z-index: -1; /*Para garantir que esse elemento vai ficar por tras de tudo*/
+z-index: -1; 
 }
 .qualidade img{
-  margin: 0 auto; /*Zero para cima e para baixo e calcula a distância que tem
-  quando colocamos auto*/
+  margin: 0 auto; 
 }
 .qualidade_lista{
 padding-top: 20px;
- overflow: auto;/*Pra dá o clear nos elementos e não ficar nenhum em cima do outro.
-Por isso fazemos uma limpeza no clear float da pagina sobre. É o clear-fix*/
+ overflow: auto;
 }
 .qualidade_lista li{
   text-align: center;
