--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ p{
     font-size: 14px;
     line-height: 20px;
   }
-
+  
 .btn{ 
   border: 3px solid #FEC63E;
   padding: 10px 30px;
@@ -72,6 +72,7 @@ display: block;
   width: 100%;
   background: #FEC63E; 
   padding: 15px 0;
+  box-shadow: 2px 2px 2px rgb(63, 61, 61);
   z-index: 10; 
 }
 .header_menu{
