--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -1,6 +1,24 @@
 /*Estilo para tablet:*/
 @media only screen and (min-width: 788px) and (max-width: 979px){ 
 
+/*Qualidade Home*/
+.qualidade::after{
+	right: 66px;
+}
+.qualidade_lista li{
+	padding: 0 10px;
+}
+
+/*Footer*/
+.footer_redes ul li a{
+	border: 3px solid #FEC63E;
+	display: block;
+	padding: 6px;
+}
+.footer_redes ul li a img{
+ width: 26px;
+ height: 26px;
+}
 
 }
 /*Estilo para smartphone*/
@@ -29,12 +47,26 @@ text-align: center;
 .header_menu ul li a:hover{
 	border-color: #fff;
 }
+.header_menu ul li a.menu_ativo{ 
+  border-color: #fff;
+}
 
 /*Introduçao*/
 .introducao{
 	margin-top: 0px;
-	padding-top: 20px;
+	padding-top: 65px;
 	background: url("../img/background-mobile.jpg") no-repeat center;
 	background-size: cover;
 }
+.introducao h1{
+  font-size: 36px;
+}
+/*Call*/
+.call{
+  padding-top: 10px;
+}
+	/*Qualidade Home*/
+	.qualidade::after{
+		display: none; 
+	}
 }
