--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -19,6 +19,24 @@
  width: 26px;
  height: 26px;
 }
+/*Produtos*/
+.produto_item h2{ 
+  top: -150px;
+  margin-bottom: -56px;
+}
+.produto_icone{
+ padding: 41px 0;
+}
+.produto_info p{
+ font-size: 14px;
+  line-height: 20px;
+  height: 122px; 
+	padding: 20px 30px;
+}
+.produto_info ul li{
+	width: 181px; 
+  height: 49px;
+}
 
 }
 /*Estilo para smartphone*/
@@ -71,11 +89,11 @@ text-align: center;
 	}
 	/*Introduçao Interna*/
 	.introducao-interna{ 
-		margin-top: 0px; /*Tirar a margem da imagem*/
+		margin-top: 0px; 
 	}
 	/*Sobre*/
 	.missao_sobre p{
-		padding-right: 0px; /*Tirar a margem do p*/
+		padding-right: 0px; 
 		font-size: 14px;
 		line-height: 20px;
 	}
@@ -83,12 +101,45 @@ text-align: center;
 		font-size: 14px;
 		line-height: 25px;
 	}
-	/*Subtitulo*/
-	.subtitulo-interno {
-		font-size: 18px;
+/*Subtitulo*/
+.subtitulo-interno {
+	font-size: 18px;
+}
+.subtitulo-interno::after{
+	width: 40px;
+	height: 2px;
+}
+/*Produtos*/
+.produto_item h2{ 
+	font-size: 28px;
+	top: -100px;
+	margin-bottom: -68px;
+}
+.produto_icone{
+ padding: 41px 0;
+}
+.produto_info p{
+	font-size: 14px;
+	line-height: 20px;
+	height: auto; 
+	padding: 20px 30px;
+}
+.produto_info ul li{
+	width: 149px; 
+	height: 49px;
+	font-size: 14px;
+	line-height: 20px;
+	padding-top: 14px;
+}
+.form{ 
+	padding-right: 0px;
 	}
-	.subtitulo-interno::after{
-		width: 40px;
-		height: 2px;
+.orcamento_dados ul{ 
+		padding-right: 0px ;
+	}
+	/*Contato*/
+	.contato_form {
+		padding-right: 0px;
+		margin-bottom: 20px;
 	}
 }
