--- a/css/style.css
+++ b/css/style.css
@@ -329,3 +329,40 @@ padding-top: 20px;
    background: #FEC63E;
    padding: 20px 0;
  }
+ /*Slide do JavaScript - Só vamos colocar esses estilos apenas se o JS existir, 
+ por isso usa o .js na frente*/
+ .js [data-slide]{
+  position: relative;
+}
+.js [data-slide] > * { 
+ position: absolute;
+ top: 0px;
+ opacity: 0; 
+}
+.js [data-slide] > .active { 
+ position: relative;
+ opacity: 1;
+ transition: opacity 500ms; 
+}
+/*Estilo da navegação das imagens*/
+.js [data-slide-nav] {
+ display: block;
+ text-align: center;
+ margin-top: 20px;
+}
+.js [data-slide-nav] > button { 
+ display: inline-block;
+ width: 12px;
+ height: 12px;
+ margin: 4px;
+ border: none;
+ padding: 0px;
+ border-radius: 6px;
+ text-indent: -99px;
+ overflow: hidden;
+ background: #1d1d1d;
+}
+.js [data-slide-nav] button.active { 
+ background: #FEC63E;
+
+}
