--- a/css/style.css
+++ b/css/style.css
@@ -364,5 +364,16 @@ padding-top: 20px;
 }
 .js [data-slide-nav] button.active { 
  background: #FEC63E;
-
+}
+/*Animações*/
+.js [data-anime] { 
+  opacity: 0;
+ }
+.js .fadeInDown{ 
+  transform: translate3d(0, -20px, 0);
+}
+.js .anime{ 
+  opacity: 1;
+  transform: none;
+  transition: opacity 800ms, transform 800ms; 
 }
